Add 5 more testimonials to carousel - now 8 total with updated dots

--- a/index.html
+++ b/index.html
@@ -255,11 +255,121 @@
                         </div>
                     </div>
                 </div>
+                <div class="testimonial">
+                    <div class="testimonial-content">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <p>"Świetna firma! Czyszczenie mebli tapicerowanych w całym domu. Personel był uprzejmy, a efekt niesamowity. Polecam wszystkim!"</p>
+                        <div class="client-info">
+                            <div class="client-avatar">
+                                <i class="fas fa-user"></i>
+                            </div>
+                            <div class="client-details">
+                                <h4>Janusz Nowak</h4>
+                                <span>Czyszczenie mebli tapicerowanych</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial-content">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <p>"MatiClean uratował mój taras! Po czyszczeniu wygląda jak nowy. Usunęli mech i zabrudzenia, a zabezpieczenie przed wilgocią jest doskonałe."</p>
+                        <div class="client-info">
+                            <div class="client-avatar">
+                                <i class="fas fa-user"></i>
+                            </div>
+                            <div class="client-details">
+                                <h4>Ewa Zielińska</h4>
+                                <span>Czyszczenie tarasów</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial-content">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <p>"Profesjonalna usługa czyszczenia dywanów. Moje dzieci były zachwycone czystością. Środki ekologiczne, więc bezpieczne dla rodziny."</p>
+                        <div class="client-info">
+                            <div class="client-avatar">
+                                <i class="fas fa-user"></i>
+                            </div>
+                            <div class="client-details">
+                                <h4>Robert Lewandowski</h4>
+                                <span>Czyszczenie dywanów</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial-content">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <p>"Czyszczenie kostki brukowej na podjeździe. Efekt wow! Kostka wygląda jak nowa, a cena była bardzo konkurencyjna."</p>
+                        <div class="client-info">
+                            <div class="client-avatar">
+                                <i class="fas fa-user"></i>
+                            </div>
+                            <div class="client-details">
+                                <h4>Katarzyna Wojcik</h4>
+                                <span>Czyszczenie kostki brukowej</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial-content">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <p>"MatiClean to moja pierwsza i ostatnia firma do czyszczenia. Szybko, tanio i skutecznie. Czyszczenie okien bez smug!"</p>
+                        <div class="client-info">
+                            <div class="client-avatar">
+                                <i class="fas fa-user"></i>
+                            </div>
+                            <div class="client-details">
+                                <h4>Tomasz Kaczmarek</h4>
+                                <span>Czyszczenie okien</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="slider-controls">
                 <button class="slider-btn prev"><i class="fas fa-chevron-left"></i></button>
                 <div class="slider-dots">
                     <span class="dot active"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
                     <span class="dot"></span>
                     <span class="dot"></span>
                 </div>
