Update meta description phone number to +48 889 555 879

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MatiClean - Profesjonalne Czyszczenie Mebli i Dywanów w Toruniu | Powiat Toruński</title>
-    <meta name="description" content="MatiClean oferuje profesjonalne czyszczenie mebli tapicerowanych, dywanów, tarasów i kostki brukowej w Toruniu, powiecie toruńskim, województwie kujawsko-pomorskim. Ekologiczne środki, szybka usługa. Zadzwoń: +48 XXX XXX XXX">
+    <meta name="description" content="MatiClean oferuje profesjonalne czyszczenie mebli tapicerowanych, dywanów, tarasów i kostki brukowej w Toruniu, powiecie toruńskim, województwie kujawsko-pomorskim. Ekologiczne środki, szybka usługa. Zadzwoń: +48 889 555 879">
     <meta name="keywords" content="czyszczenie mebli Toruń, czyszczenie dywanów Toruń, czyszczenie tapicerki Toruń, mycie kostki brukowej Toruń, czyszczenie tarasów Toruń, firma sprzątająca Toruń, powiat toruński, kujawsko-pomorskie, MatiClean">
     <meta name="author" content="MatiClean">
     <meta name="robots" content="index, follow">
