Remove duplicate FAQ section and add FAQ link to navigation

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 <li><a href="#about">O Nas</a></li>
                 <li><a href="#services">Usługi</a></li>
                 <li><a href="#testimonials">Opinie</a></li>
+                <li><a href="#faq">FAQ</a></li>
                 <li><a href="#contact">Kontakt</a></li>
             </ul>
             <div class="hamburger">
@@ -374,38 +375,6 @@
                     <span class="dot"></span>
                 </div>
                 <button class="slider-btn next"><i class="fas fa-chevron-right"></i></button>
-            </div>
-        </div>
-    </section>
-
-    <section id="faq" class="faq">
-        <div class="container">
-            <h2 class="section-title">Najczęściej Zadawane Pytania</h2>
-            <div class="faq-grid">
-                <div class="faq-item">
-                    <h3>Ile kosztuje czyszczenie mebli tapicerowanych?</h3>
-                    <p>Ceny zaczynają się od 50 zł za pojedynczy element. Dokładna wycena zależy od wielkości i stopnia zabrudzenia.</p>
-                </div>
-                <div class="faq-item">
-                    <h3>Jak długo trwa usługa czyszczenia?</h3>
-                    <p>Czyszczenie pojedynczego pokoju zajmuje zwykle 2-4 godziny. Dla większych powierzchni czas może być dłuższy.</p>
-                </div>
-                <div class="faq-item">
-                    <h3>Czy używacie ekologicznych środków?</h3>
-                    <p>Tak, wszystkie nasze środki są przyjazne dla środowiska i zdrowia, certyfikowane i bezpieczne dla dzieci i zwierząt.</p>
-                </div>
-                <div class="faq-item">
-                    <h3>Czy świadczycie usługi w całym powiecie toruńskim?</h3>
-                    <p>Tak, obsługujemy Toruń i cały powiat toruński, a także inne miejscowości w województwie kujawsko-pomorskim.</p>
-                </div>
-                <div class="faq-item">
-                    <h3>Jak umówić wizytę?</h3>
-                    <p>Możesz zadzwonić, wysłać wiadomość WhatsApp lub wypełnić formularz kontaktowy na stronie.</p>
-                </div>
-                <div class="faq-item">
-                    <h3>Czy dajecie gwarancję na wykonane usługi?</h3>
-                    <p>Tak, na wszystkie nasze usługi dajemy gwarancję jakości i satysfakcji klienta.</p>
-                </div>
             </div>
         </div>
     </section>
